fix jdk21 feature